# usr-solver

./: .gitignore  Cargo.toml  LICENSE  README.md  cases_to_investigate.md
.github/workflows/: checks.yml  update.yml
archive/: union_find.rs
archive/python/: regexsolver.py
archive/skeleton/: nullprojection.txt  regexsolver.txt
benchmarks/: date.smt2  date2.smt2  date_format_days_sat.smt2  det_blowup_unsat_3.smt2  example_s_expr.txt  hex_syntax_test.smt2  hex_syntax_test_sat.smt2  hexcode_sat.smt2  passw_eq_sat1.smt2  passw_sat1.smt2  passw_simplest_sat_1.smt2  passw_simplest_sat_2.smt2  passw_unsat1.smt2  range1.smt2  re_all_sat.smt2  reglan_var_test_sat.smt2  simple1_sat.smt2  simple2.smt2  simple3_sat.smt2  simple_definefun_sat_1.smt2  simple_definefun_sat_2.smt2  simple_let_sat_1.smt2  simple_let_sat_2.smt2  simple_let_sat_3.smt2  simple_let_sat_4.smt2  simple_not_sat_1.smt2  simple_not_sat_2.smt2  simple_zelkova_unsat.smt2  simplehex_sat.smt2  test0.smt2  test1.smt2  usr_1_sat.smt2  zelkova_unsat.smt2
benchmarks/range/: intersectranges_sat.smt2  intersectranges_unsat.smt2  range_out_of_range_unsat.smt2  range_sat.smt2  rangecomplement_unsat.smt2  union_ranges_2_sat.smt2  union_ranges_sat.smt2  (+1 more)
experiments/: run_all.py  solvers.json
python/: PredicateEvaluation.py  antimirov.py  nullprojection.py  regexsolver.py
skeleton/: PredicateEvaluation.txt  antimirov.txt
src/: antimirov.rs  antimirov_sat.rs  brzozowski.rs  classes.rs  lib.rs  main.rs  predicateEvaluation.rs  predicate_evaluation.rs  print.rs  smt.rs  unionFind.rs  union_find.rs
src/smt/: mod.rs  (+5 more)
(+124 files in other folders)
