[package]
name = "gen-regex-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
disjoint-sets = "0.4.2"
either = "1.6"
lazy_static = "1.5.0"
lexpr = "0.2.7"
regex = "1.11.1"
z3 = "0.12.1"
z3-sys = {version = "0.8.1", features = ["static-link-z3"] }

[lib]
doctest = false
